--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "dayjs": "^1.11.7",
     "faker": "^6.6.6",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-lines-ellipsis": "^0.15.3",
